from django.db import models

class Institution(models.Model):
    name = models.CharField(max_length=255, unique=True)
    city = models.CharField(max_length=100)

    def __str__(self):
        return self.name
